--- a/index.src.html
+++ b/index.src.html
@@ -81,8 +81,9 @@ Previous versions:
 Editors:
 </dt>
 <dd class="vcard">
-<span class="fn">Christophe Dumez</span>, <span class="org"><a href="http://www.samsung.com/sec">Samsung Electronics,
-Co., Ltd</a></span>, <span class="email"><a href="mailto:ch.dumez@samsung.com">ch.dumez@samsung.com</a></span>
+<span class="fn">Mahesh Kulkarni</span>, <span class="org"><a href="http://www.samsung.com/sec">Samsung Electronics,
+Co., Ltd</a></span>, <span class="email"><a href="mailto:mahesh.kk@samsung.com">mahesh.kk@samsung.com</a></span>
+<span class="fn">Christophe Dumez</span>
 </dd>
 </dl>
 <div class="w3conly">
@@ -115,7 +116,6 @@ Example use of the ScheduledTask API for adding, getting and removing and listen
 How to set an alarm 10 minutes from now?
 </p>
 <pre>
-// System message listener for an "task"
 // https://example.com/serviceworker.js
 this.ontask = function(task) {
   alert(task.data.message);
